FireForest new version

--- a/disparejo.ipynb
+++ b/disparejo.ipynb
@@ -20,12 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Model\n",
     "import agentpy as ap\n",
+    "import pandas as pnd\n",
     "\n",
     "# Visualization\n",
     "import seaborn as sns\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class Model(ap.Model):\n",
@@ -132,85 +136,189 @@
     "    def update(self):\n",
     "        self.agents.record('curr_direction')\n",
     "        self.agents.record('score')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed: 5 steps\n",
-      "Run time: 0:00:00.003534\n",
+      "Completed: 999 steps\n",
+      "Run time: 0:00:00.039999\n",
       "Simulation finished\n"
      ]
     }
    ],
    "source": [
-    "parameters = {'steps': 5}\n",
+    "simul = 1000\n",
+    "parameters = {'steps': simul-1}\n",
     "model = Model(parameters)\n",
     "\n",
     "res = model.run()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "          curr_direction  score\nobj_id t                       \n1      0               0      0\n       1               1      0\n       2               0      0\n       3               1      0\n       4               1      1\n       5               1      1\n2      0               0      0\n       1               0      1\n       2               0      1\n       3               0      1\n       4               0      1\n       5               0      1\n3      0               1      1\n       1               1      1\n       2               0      1\n       3               0      1\n       4               0      1\n       5               1      1\n4      0               0      0\n       1               1      0\n       2               0      0\n       3               1      0\n       4               0      0\n       5               0      0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>curr_direction</th>\n      <th>score</th>\n    </tr>\n    <tr>\n      <th>obj_id</th>\n      <th>t</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"6\" valign=\"top\">1</th>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th rowspan=\"6\" valign=\"top\">2</th>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th rowspan=\"6\" valign=\"top\">3</th>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th rowspan=\"6\" valign=\"top\">4</th>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>curr_direction</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>obj_id</th>\n",
+       "      <th>t</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">4</th>\n",
+       "      <th>995</th>\n",
+       "      <td>0</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>1</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>0</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>0</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            curr_direction  score\n",
+       "obj_id t                         \n",
+       "1      0                 1      0\n",
+       "       1                 1      0\n",
+       "       2                 0      0\n",
+       "       3                 1      0\n",
+       "       4                 1      1\n",
+       "...                    ...    ...\n",
+       "4      995               0     78\n",
+       "       996               1     78\n",
+       "       997               0     78\n",
+       "       998               0     78\n",
+       "       999               1     78\n",
+       "\n",
+       "[4000 rows x 2 columns]"
+      ]
      },
-     "execution_count": 5,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res.variables.Player"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "                                     seed\n0  47781996468612601228286266083587513407",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>seed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>47781996468612601228286266083587513407</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- PLAYERS FINAL SCORES AFTER 1000 GAMES ---------- \n",
+      "\n",
+      "Player 1 final score: 135\n",
+      "Player 2 final score: 159\n",
+      "Player 3 final score: 136\n",
+      "Player 4 final score: 78\n"
+     ]
     }
    ],
    "source": [
-    "res."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+    "print(\"---------- PLAYERS FINAL SCORES AFTER \" + str(simul) + \" GAMES ---------- \\n\")\n",
+    "\n",
+    "print(\"Player 1 final score: \" + str(res.variables.Player.score[1][simul-1]))\n",
+    "print(\"Player 2 final score: \" + str(res.variables.Player.score[2][simul-1]))\n",
+    "print(\"Player 3 final score: \" + str(res.variables.Player.score[3][simul-1]))\n",
+    "print(\"Player 4 final score: \" + str(res.variables.Player.score[4][simul-1]))"
+   ]
   }
  ],
  "metadata": {
@@ -220,7 +328,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.8"
   },
   "orig_nbformat": 4,
