details and cleaning robots intructions

--- a/cleaning_robots.ipynb
+++ b/cleaning_robots.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Problema 3 \n",
+    "\n",
+    "Considere que en una habitación con MxN espacios, hay P robots limpiadores reactivos. Cada uno de los robot limpiadores se comporta de la siguiente manera:\n",
+    "\n",
+    "- Si la celda en la que se encuentra está sucia, entonces aspira durante 10 segundos.\n",
+    "- Si la celda está limpia, el robot elije una dirección aleatoria para moverse (unas de las 8 celdas vecinas que esté sin otro robot) y elije la acción de movimiento (si no puede moverse allí, permanecerá en la misma celda). Este movimiento dura 2 segundos.\n",
+    "- Si varios robots coinciden en alguna de las celdas, uno se queda en dicha celda y los otros se tiene que mover a alguna otra celda. \n",
+    "- Quien se queda o quien se tiene que mover se elige aleatoriamente.\n",
+    "- Al inicio de la simulación, las posiciones de los robots son elegidas al azar, y de igual forma las posiciones están limpias o sucias aleatoriamente.\n",
+    "\n",
+    "Realiza al menos 5 simulaciones en este entorno con diferente número de robots, y reporta lo siguiente:\n",
+    "\n",
+    "- Tiempo necesario hasta que todas las celdas estén limpias.\n",
+    "- Porcentaje de celdas limpias después del termino de la simulación.\n",
+    "- Número de movimientos realizados por todos los agentes.\n",
+    "- Analiza cómo la cantidad de agentes impacta el tiempo dedicado, así como la cantidad de movimientos realizados. ¿Qué comportamiento agregarías a los robots para que limpiaran con mayor velocidad?"
+   ]
   }
  ],
  "metadata": {
