tied rounds addition

--- a/disparejo.ipynb
+++ b/disparejo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
      "output_type": "stream",
      "text": [
       "Completed: 999 steps\n",
-      "Run time: 0:00:00.035002\n",
+      "Run time: 0:00:00.036036\n",
       "Simulation finished\n"
      ]
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -219,12 +219,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -236,28 +236,28 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">4</th>\n",
        "      <th>995</th>\n",
-       "      <td>0</td>\n",
-       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
-       "      <td>1</td>\n",
-       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
        "      <td>1</td>\n",
-       "      <td>82</td>\n",
+       "      <td>107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
        "      <td>0</td>\n",
-       "      <td>82</td>\n",
+       "      <td>107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>0</td>\n",
-       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -268,21 +268,21 @@
        "            curr_direction  score\n",
        "obj_id t                         \n",
        "1      0                 0      0\n",
-       "       1                 0      0\n",
+       "       1                 1      0\n",
        "       2                 0      0\n",
-       "       3                 1      0\n",
-       "       4                 0      0\n",
+       "       3                 0      0\n",
+       "       4                 1      0\n",
        "...                    ...    ...\n",
-       "4      995               0     82\n",
-       "       996               1     82\n",
-       "       997               1     82\n",
-       "       998               0     82\n",
-       "       999               0     82\n",
+       "4      995               1    107\n",
+       "       996               0    107\n",
+       "       997               1    107\n",
+       "       998               0    107\n",
+       "       999               1    107\n",
        "\n",
        "[4000 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -302,10 +302,11 @@
      "text": [
       "---------- PLAYERS FINAL SCORES AFTER 1000 GAMES ---------- \n",
       "\n",
-      "Player 1 final score: 125\n",
-      "Player 2 final score: 156\n",
-      "Player 3 final score: 125\n",
-      "Player 4 final score: 82\n"
+      "Player 1 final score: 113\n",
+      "Player 2 final score: 157\n",
+      "Player 3 final score: 114\n",
+      "Player 4 final score: 107\n",
+      "Tied Rounds: 509\n"
      ]
     }
    ],
@@ -315,7 +316,8 @@
     "print(\"Player 1 final score: \" + str(res.variables.Player.score[1][simul-1]))\n",
     "print(\"Player 2 final score: \" + str(res.variables.Player.score[2][simul-1]))\n",
     "print(\"Player 3 final score: \" + str(res.variables.Player.score[3][simul-1]))\n",
-    "print(\"Player 4 final score: \" + str(res.variables.Player.score[4][simul-1]))"
+    "print(\"Player 4 final score: \" + str(res.variables.Player.score[4][simul-1]))\n",
+    "print(\"Tied Rounds: \" + str(simul - (res.variables.Player.score[1][simul-1] + res.variables.Player.score[2][simul-1] + res.variables.Player.score[3][simul-1] + res.variables.Player.score[4][simul-1])))"
    ]
   }
  ],
